force-app/main/default/objects/Flighting__c/Flighting__c.object-meta.xml
<CustomObject>
    <label>Flighting</label>
    <nameField>
        <label>Flighting</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flighting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>