force-app/main/default/objects/Flighting__c/fields/Cost_Summary__c.field-meta.xml
<CustomField>
    <fullName>Cost_Summary__c</fullName>
    <label>Cost Summary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>