force-app/main/default/objects/Flighting__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Line Item</label>
    <referenceTo>Line_Item__c</referenceTo>
    <relationshipLabel>Flighting</relationshipLabel>
    <relationshipName>Flighting</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>