force-app/main/default/objects/Flighting__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>7</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>