force-app/main/default/objects/Flighting__c/fields/Units_Summary__c.field-meta.xml
<CustomField>
    <fullName>Units_Summary__c</fullName>
    <label>Units Summary</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>